# treasury

./: .gitignore  README.md
0 Python/: 0 Введение.md
0 Python/1 Типы данных/: 0 Введение.md  1 Сложность операций.md
0 Python/1 Типы данных/Изменяемые/: Множества.md  Словари.md  Списки.md
0 Python/1 Типы данных/Неизменяемые/: Кортежи.md  Строки.md  Целые числа.md
1 Алгоритмы/0 Структуры данных/: 0 Массивы.md  1 Связанные и двусвязные списки.md
tasks/common/: dot_update.py  tasks.md
tasks/tdd/common_prefix/: README.md  pyproject.toml
tasks/tdd/common_prefix/src/: common_prefix.py
tasks/tdd/common_prefix/tests/: test_common_prefix.py
tasks/tdd/mutual_elements/: README.md  pyproject.toml
tasks/tdd/mutual_elements/src/: mutual_elements.py
tasks/tdd/mutual_elements/tests/: test_mutual_elements.py
