[project]
name = "common_prefix"
version = "0.1.0-dev"
requires-python = ">=3.11,<3.12"

dependencies = [
    "pytest==8.3.5",
]

[dependency-groups]
linters = [
    "isort==6.0.1",
    "mypy==1.15.0",
    "ruff==0.11.6",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [
    "tests",
]

[tool.isort]
balanced_wrapping = true
profile = "black"
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
line_length = 88
lines_between_types = 1
src_paths = ["services"]
known_first_party = [
    "src",
    "tests",
    ]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
    ]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
strict = true

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
